k8s/observability/prometheus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: observability
  labels:
    app: prometheus
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0

      containers:
        - image: prom/prometheus:latest
          name: prometheus
          ports:
            - containerPort: 9090
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/prometheus/prometheus.yml
              name: prometheus-config
              readOnly: true
              subPath: prometheus.yml

            - mountPath: /var/lib/prometheus
              name: prometheus-data

          livenessProbe:
            httpGet:
              port: 9090
              path: /-/healthy
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5

          resources:
            requests:
              memory: "500Mi"
              cpu: "150m"
            limits:
              memory: "750Mi"
              cpu: "300m"
      restartPolicy: Always
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config
            items:
              - key: prometheus.yaml
                path: prometheus.yml

        - name: prometheus-data
          persistentVolumeClaim:
            claimName: prometheus-data
