k8s/observability/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
  name: prometheus
spec:
  ports:
    - name: prometheus
      port: 9410
      targetPort: 9090
  selector:
    app: prometheus
